# IGVC_robotics_club_iitk

./: .gitmodules  README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/two_wheel_drive/share/ament_index/resource_index/package_run_dependencies/: two_wheel_drive
install/two_wheel_drive/share/ament_index/resource_index/parent_prefix_path/: two_wheel_drive
install/two_wheel_drive/share/two_wheel_drive/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/two_wheel_drive/share/two_wheel_drive/launch/: robot.launch.py
install/two_wheel_drive/share/two_wheel_drive/models/autonav_mesh/: model.sdf
install/two_wheel_drive/share/two_wheel_drive/urdf/: 1robot.urdf  irobot.urdf  orobot.urdf  robot.urdf
install/two_wheel_drive/share/two_wheel_drive/urdf/models/construction_barrel/: model-1_2.sdf  model-1_4.sdf  model.sdf
log/: latest_build
src/: depth_camera_subscriber.py
src/robot_localization/params/: dual_ekf_navsat_example.yaml  ekf.yaml  navsat_transform.yaml  ukf.yaml
src/robot_localization/src/: navsat_transform.cpp
src/two_wheel_drive/: CMakeLists.txt  package.xml
src/two_wheel_drive/launch/: cartographer.launch.py  robot.launch (copy).py  robot.launch.py
src/two_wheel_drive/scripts/: cam.py
src/two_wheel_drive/urdf/: robot.urdf
src/two_wheel_drive/urdf/models/barrels_low/: model.sdf
src/two_wheel_drive/worlds/test/: simple.world
